@@ -1,4 +1,4 @@
-264c4271232f3155e95c582babaccf77 *DESCRIPTION
+1958befc840665ca57e3c7291aab16de *DESCRIPTION
 27bf59c2a37bff07a78c9730061e532b *LICENSE
 86c6f4cfd557233b11e596a7cef236d5 *NAMESPACE
 7dcca3f9e623c3309322180daf26c7f5 *R/Ginv.R
@@ -10,7 +10,7 @@ e25d932260f95f734c3d44e876b2c282 *R/find.haplo.beta.qt.q
 095fae40628d83b2299d4cddee822f05 *R/geno.count.pairs.q
 b5dda9e515218788c391762993f80de2 *R/geno1to2.q
 eb53f16706da9d96b3a794bd15119b35 *R/get.hapPair.q
-aa0f1b76121dd2c4cb2e63f149c05f43 *R/haplo.binomial.R
+17f0e7fff27e71366aeafa44002c50d1 *R/haplo.binomial.R
 33efdb6c8761036c3ababd0db9448dcb *R/haplo.cc.q
 6647804e93266e284a41584ea2145d9a *R/haplo.chistat.q
 0187e0c5a3eb6852ba1b603c6fa39ffe *R/haplo.design.q
@@ -19,7 +19,7 @@ fd414b94a392ce5f00645875fd2deda3 *R/haplo.em.fitter.q
 3291edc30eccca0f0a66c5257d2e1a94 *R/haplo.em.q
 7c1f182e35d9fd993cc892b10036204f *R/haplo.enum.q
 fff31375db75a909b6d9f9492714bc15 *R/haplo.glm.control.q
-02edf09e70f95bca30e14689a1d7cedf *R/haplo.glm.q
+6cf905edddd28f4580d5a4537e534df4 *R/haplo.glm.q
 b1c05551780e9c9cf0174d4fc8b255e7 *R/haplo.group.q
 cc2eb2ad4433e47bb2da238347113c76 *R/haplo.hash.q
 f72942fbab0e6563717da0630124dd8d *R/haplo.model.frame.q
@@ -33,7 +33,7 @@ f8d614f548e81489bf39eedcd1d398f3 *R/haplo.power.cc.q
 6baca51b7bc745ba4df181df9e06585b *R/haplo.score.glm.q
 e1bb4848b97d45f644f01c1691e3ac10 *R/haplo.score.merge.q
 33a9840c4a583c7629922626d06c59b0 *R/haplo.score.podds.q
-1969eb1eb5c65422a841909f8c9efa71 *R/haplo.score.q
+07fd350d8f2d202fa30ea5fb8e6e506d *R/haplo.score.q
 eec6027c469ae663a83d869e85b62a4c *R/haplo.score.slide.q
 9a40b10aab1b9af2eb84704aa71423f7 *R/locator.haplo.q
 2b233d39b5fea30aa1e46eb8f88b8ba6 *R/locus.q
@@ -63,14 +63,14 @@ b9d82ad608c6eb8dcb8633f0c8af25d9 *R/residScaledGlmFit.q
 763d3be1cfca8408a01b7cd3cc665064 *R/summaryGeno.q
 1248bf03ef39261e6a9eeb641acbaa42 *R/varfunc.glm.fit.q
 a030452a0250f7d1003029e33aed5813 *R/x.sexcheck.q
-506e3f306ba307dc085535e1d15b033f *R/zzz.haplo.stats.R
+118ae8ba1c9a51017cd121ac33606ac6 *R/zzz.haplo.stats.R
 4eed20f1d136a50e9996fb5802b0ca28 *data/hapPower.demo.tab.gz
 b395516007295803e95e4951b0066373 *data/hla.demo.tab.gz
 57ef4a88591f0afdc4c9cfb4421c83eb *data/seqhap.dat.tab.gz
 a7ee89da0aff191a340c312643f7cd73 *data/seqhap.pos.tab.gz
-7e2b9de6da719ed356106ba206c95585 *inst/NEWS.Rd
+8cd2f7ee196253d5060a0d627da7c73f *inst/NEWS.Rd
 d368405f1c604912f51ba286eed9944a *inst/doc/GPL.txt
-4209a9a4be66828c31cf166dca8dde84 *inst/doc/manualHaploStats.pdf
+32b435ec53e062497219f3aa24ff3efa *inst/doc/manualHaploStats.pdf
 10ae00dab9c8f986bf5b6c64eef98521 *man/Ginv.Rd
 bf6f1a85454445157ab798632128e8ab *man/anova.haplo.glm.Rd
 66849779ea8731d335378d06d80e2765 *man/chisq.power.Rd
@@ -86,7 +86,7 @@ fa5761d6d2ec162bc2e166178d9d0fdd *man/haplo.cc.Rd
 e0339787d1b0f74db1824e48dd4afd89 *man/haplo.em.Rd
 893eb6068777d212c75dd717b4a8b17b *man/haplo.em.control.Rd
 6e75eaa661ff17a0461a50a4a7a98612 *man/haplo.em.fitter.Rd
-84e85b2cf190a2fbe3f722d8e411079f *man/haplo.glm.Rd
+bf9ae3a0353c22482315866ebbafb373 *man/haplo.glm.Rd
 d9a1a556832dae001e6393605d26bfe9 *man/haplo.glm.control.Rd
 c80a3a8a7ac0f61128cd6d5efe8f341f *man/haplo.group.Rd
 6dd0e65f2b9fa8ced4db590319a8df34 *man/haplo.hash.Rd
@@ -98,14 +98,14 @@ ecbb99210a6ecaba9ad3ef0542a1a744 *man/haplo.score.Rd
 317e563055a67f95d71bc48ddc53a645 *man/haplo.score.merge.Rd
 9b29053f1a486222a80c60f8d25e144f *man/haplo.score.slide.Rd
 a265736547bb7e3687040801c27d6461 *man/hla.demo.Rd
-ce01593c02ef7c1c2db3947b0d7f16a5 *man/internalHaploStats.Rd
+8c9830d5a34c8b13d7ad0d9579dfd167 *man/internalHaploStats.Rd
 4b006e76723557a85ebf43bbe8340d2c *man/locator.haplo.Rd
 362811ed7cdafcf3d6b0e73154c4917d *man/locus.Rd
 0733a88122d95a63b6ed36d689fbebfa *man/louis.info.Rd
 046f43b7a15258bc624da99c056db44c *man/na.geno.keep.Rd
 b9f93157667b55dae7720c34822366e2 *man/plot.haplo.score.Rd
 fd6f8bd5fea7b65caa11b1f7f04cc0a4 *man/plot.haplo.score.slide.Rd
-d8d2d5480347a625daccbbd74ade9572 *man/plot.seqhap.Rd
+891e6b26cd028a4eb064ce11c7ccbb51 *man/plot.seqhap.Rd
 ad26dc0144963d3b4d3669604ff91f04 *man/print.haplo.cc.Rd
 63a86b611e384decb830831941fc2a55 *man/print.haplo.em.Rd
 ae93f1e00557e89659ade6f89872d473 *man/print.haplo.group.Rd
@@ -126,7 +126,7 @@ d1cfb119490d981c6a87139f300a2e64 *man/summary.haplo.em.Rd
 03e1d61ee4c2c81c306a08fa00f86e92 *man/x.sexcheck.Rd
 85648a00108226e524c507ecbcbd6261 *rnw/manualHaploStats.Rnw
 8eb8bdef919d148287565fd8334474f6 *src/groupsum.c
-9a5d53ad231fb8cf088bdfbb66ea045a *src/haplo_em_pin.c
+b953b97d95a90a92318b08d153019d12 *src/haplo_em_pin.c
 55c60fb632f1f32c26c983f1c78f7baf *src/haplo_em_pin.h
 15e8689d406beb4baf38910220872f6a *src/louis_info.c
 240de50199d7ece7922ef182af153206 *src/seqhap.c
@@ -136,9 +136,10 @@ d1cfb119490d981c6a87139f300a2e64 *man/summary.haplo.em.Rd
 ad627b80335a8f28df2f4b571580801a *tests/snapFUN.s
 6dc5d6c9f9bb7c04df0c45e1f2c3767c *tests/test.Ginv.R
 8065caa8a72aab19bde17d754e48c4ef *tests/test.Ginv.Rout.save
-63ecfdff9bbb2d60db746330779390f8 *tests/test.haplo.em.R
-d6a6ca02345178457a6c6d656c9630e0 *tests/test.haplo.em.Rout.save
-72bacd087f8e1d5700d64c184712b318 *tests/test.haplo.power.R
-f6a7b50d9665e862338651df585738cb *tests/test.haplo.power.Rout.save
-692d4c0616d574ce70275f9a65f196d6 *tests/test.methods.haplo.glm.R
-a7fe218420e7c322939e72c34cc9e9d8 *tests/test.methods.haplo.glm.Rout.save
+f21182f157466f14935614c750ce17bc *tests/test.haplo.em.R
+70561397006e7f0f79e4a6e79b828274 *tests/test.haplo.em.Rout
+89ebce6e0424f15f2d3541473b7ae0e0 *tests/test.haplo.em.Rout.save
+cfb2ace787915270576d602baeb62795 *tests/test.haplo.power.R
+d069f67c61cae5cebddc97800acfc2f9 *tests/test.haplo.power.Rout.save
+99adb9eab5a601513bae10abc23c0782 *tests/test.methods.haplo.glm.R
+cd0836f4c5cc8dc90edb28f1b5c00e8f *tests/test.methods.haplo.glm.Rout.save
